# desir

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  gateway.db  pyproject.toml  server.py  test_agent2.py
ai/agents/: agent1.py  agent2.py  agent3.py  agent4.py  deps.py  email_draft_extractor.py  orchestrator.py
ai/prompts/: calendar_agent.md  communication_agent.md  email_agent.md  email_draft_extractor.md  knowledge_base_agent.md  orchestrator.md  realtime_session.md  search_agent.md  tombio.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/component/: RobotFace.tsx  ToolStatus.tsx
frontend/src/service/: audioService.ts
frontend/tests/: approval-state.test.mjs  approval-timeline.test.mjs
gateway/: gateway.db
gateway/app/: config.py  dependencies.py  main.py
gateway/app/core/: auth.py  exceptions.py  security.py
gateway/app/db/: models.py  schema.sql  session.py
gateway/app/middleware/: cors.py  logging.py  rete_limit.py
gateway/app/routers/: ai.py  auth.py  data.py  external.py  files.py  mcp.py
gateway/app/schemas/: ai.py  auth.py  data.py  files.py
schemas/: agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  inputs.py  orchestrator.py
src/desir/: __init__.py
tests/: test_email_approval.py  test_realtime_prompt.py  test_server_email_approval.py
tools/: calendar.py  communication.py  email_approval.py  knowledge_base.py  number_to_english.py  openai_realtime.py  sending_email.py  tts.py  voicerecognition.py
(+26 files in other folders)
